[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Enemy/Bug.png" type="Texture" id=1]
[ext_resource path="res://Assets/Shadows/Shadow.png" type="Texture" id=2]
[ext_resource path="res://Assets/Global/Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hitbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Hitbox-Hurtbox/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Enemy/Bug.gd" type="Script" id=6]
[ext_resource path="res://Assets/Effects/EnemyBlinkEffect.shader" type="Shader" id=7]
[ext_resource path="res://Assets/Hitbox-Hurtbox/DetectionZone.tscn" type="PackedScene" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/blinking = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "Animation",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 6.13841

[sub_resource type="CapsuleShape2D" id=8]
radius = 3.61118
height = 4.38783

[sub_resource type="CircleShape2D" id=9]
radius = 7.85394

[sub_resource type="CircleShape2D" id=10]
radius = 75.0379

[sub_resource type="Animation" id=11]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/blinking")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Bug" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 9
script = ExtResource( 6 )
MAX_SPEED = 180
FRICTION = 500
PUSH = 300

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 1 )
frames = SubResource( 6 )
animation = "Animation"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 7 )

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 2

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 0.2 )
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 9 )

[node name="DetectionZone" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="DetectionZone" index="0"]
shape = SubResource( 10 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/End = SubResource( 11 )
anims/Start = SubResource( 12 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="end_invincibility" from="Hurtbox" to="." method="_on_Hurtbox_end_invincibility"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="DetectionZone"]
